# Automatic-Circuit-Discovery

./: .gitignore  ACDC_Perturbation_Implementation.md  README.md  pyproject.toml
acdc/: TLACDCCorrespondence.py  TLACDCExperiment.py  main.py
acdc/ioi/: perturbations.py  utils.py
cluster_submission/: get_probs.sh  get_wandb_runs.sh  run_acdc.sh  run_acdc.sub  run_acdc_interactive.sub  run_acdc_robustness_evaluation.sh  run_acdc_robustness_evaluation_interactive.sub  run_robustness.sh  run_robustness.sub  run_single_acdc.sub  run_single_robustness.sh  test_hello_world_sleep.py  test_submission.sh  test_submission.sub
experiments/: hook_playground.py  ioi_perturbation_evaluation.py
experiments/robustness/: IMPLEMENTATION.md  get_probs.py  run_experiments.py
experiments/robustness/config/: __init__.py  experiment_config.py
experiments/robustness/core/: __init__.py  circuit_loader.py  experiment_runner.py  metrics.py  results.py
experiments/robustness/experiments/: __init__.py  baseline_jaccard.py  baseline_logit_diff.py  io_s_distribution.py  jaccard_cross_similarity.py  logit_diff_analysis.py  pairwise_jaccard.py
experiments/robustness/results/analysis/: robustness_results.md
notebooks/: roc_plot_generator.py
tests/: test_wandb_connection.py
tests/robustness/: test_metrics.py  test_metrics_logit_diff.py  test_metrics_pairwise_jaccard.py  test_utils.py
utils/: circuit_utils.py  get_wand_run_ids.py  get_wandb_run_ids.py  utils.py
